--- a/js-portfolio-main/package.json
+++ b/js-portfolio-main/package.json
@@ -23,6 +23,10 @@
   },
   "homepage": "https://github.com/gndx/js-portfolio#readme",
   "devDependencies": {
+    "@babel/core": "^7.21.8",
+    "@babel/plugin-transform-runtime": "^7.21.4",
+    "@babel/preset-env": "^7.21.5",
+    "babel-loader": "^9.1.2",
     "webpack": "^5.82.0",
     "webpack-cli": "^5.1.0"
   }
