--- a/js-portfolio-main/package.json
+++ b/js-portfolio-main/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "dev": "webpack --mode development"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
     "@babel/plugin-transform-runtime": "^7.21.4",
     "@babel/preset-env": "^7.21.5",
     "babel-loader": "^9.1.2",
+    "html-webpack-plugin": "^5.5.1",
     "webpack": "^5.82.0",
     "webpack-cli": "^5.1.0"
   }
