--- a/js-portfolio-main/package.json
+++ b/js-portfolio-main/package.json
@@ -28,7 +28,10 @@
     "@babel/plugin-transform-runtime": "^7.21.4",
     "@babel/preset-env": "^7.21.5",
     "babel-loader": "^9.1.2",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.1",
+    "mini-css-extract-plugin": "^2.7.5",
     "webpack": "^5.82.0",
     "webpack-cli": "^5.1.0"
   }
