--- a/js-portfolio-main/package.json
+++ b/js-portfolio-main/package.json
@@ -30,6 +30,7 @@
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^5.0.1",
+    "dotenv-webpack": "^8.0.1",
     "eslint": "^8.44.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.1",
