prod & dev files

--- a/js-portfolio-main/package.json
+++ b/js-portfolio-main/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production",
-    "dev": "webpack --mode development",
+    "build": "webpack --mode production --config webpack.config.js",
+    "dev": "webpack --config webpack.config.dev.js",
     "setup-env": "node -e \"const fs = require('fs'); fs.copyFileSync('example.env', '.env');\""
   },
   "repository": {
